--- a/Ruby_on_rails/Training_1/simple_cms/app/views/demo/hello.html.erb
+++ b/Ruby_on_rails/Training_1/simple_cms/app/views/demo/hello.html.erb
@@ -1,1 +1,12 @@
 <h1>Hello World! from hello!</h1>
+
+<% 1 +1 %>
+
+<% target = "World" %>
+<%= "Hello #{target}" %>
+
+<br />
+
+<% 3.times do |n| %>
+  <%= n %><br />
+<% end %>
