--- a/Ruby_on_rails/Training_1/simple_cms/app/views/demo/hello.html.erb
+++ b/Ruby_on_rails/Training_1/simple_cms/app/views/demo/hello.html.erb
@@ -14,3 +14,11 @@
 <br />
 
 <%= link_to('Index page', {:action => 'index'}) %>
+
+<br/>
+
+ID: <%= @id %> <br/>
+ID: <%= params[:id]%> <br/>
+Page: <%= @page %> <br/>
+Page: <%= params[:page] %></br>
+Next Page: <%= @page.to_i + 1%></br>
